--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
     <div class="container mb-5">
         <div class="row">
-            <div class="col-10 offset-1 col-lg-8 offset-lg-2 text-center">
-                <img src="https://durhamsacredharp.co.uk/images/durham_sacred_harp_logo_rectangle.png" class="img-fluid" alt="Durham Sacred Harp">
+            <div class="col-10 offset-1 col-lg-8 offset-lg-2 pt-4 text-center">
+                <img src="https://durhamsacredharp.co.uk/images/dsh_logo_new_website.png" class="img-fluid" alt="Durham Sacred Harp">
             </div>
         </div>
         <div class="row mt-4 mb-4">
