--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
-    <meta property="og:image" content="https://durhamsacredharp.co.uk/images/durham_sacred_harp_social.png" />
+    <meta property="og:image" content="hhttps://durhamsacredharp.co.uk/images/dsh_new_share_image.png" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@durham_sh">
     <meta name="twitter:creator" content="@durham_sh">
