--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Durham Sacred Harp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://durhamsacredharp.co.uk/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
@@ -18,7 +18,7 @@
     <meta name="twitter:title" content="Sing American folk hymns in Durham">
     <meta name="twitter:description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month">
     <meta name="twitter:image" content="https://durhamsacredharp.co.uk/images/dsh_new_share_image_twitter.png">
-    <link rel="icon" type="image/x-icon" href="https://durhamsacredharp.co.uk/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <meta name="google-site-verification" content="_wn5kDD-KQIqThtDEBTZNvmbzzF3UoENjI3VURcHtqs" />
 
 </head>
@@ -27,7 +27,7 @@
     <div class="container mb-5">
         <div class="row">
             <div class="col-10 offset-1 col-lg-8 offset-lg-2 pt-4 text-center">
-                <img src="https://durhamsacredharp.co.uk/images/dsh_logo_new_website.svg" class="img-fluid" style="max-height: 300px;" alt="Durham Sacred Harp">
+                <img src="/images/dsh_logo_new_website.svg" class="img-fluid" style="max-height: 300px;" alt="Durham Sacred Harp">
             </div>
         </div>
         <div class="row mt-4 mb-4">
@@ -76,7 +76,7 @@
                     <small>Click on the map below for Google Maps</small>
                 </p>
                 <a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">
-                    <img src="https://durhamsacredharp.co.uk/images/map.png" class="img-fluid mx-auto d-block" alt="map of durham">
+                    <img src="/images/map.png" class="img-fluid mx-auto d-block" alt="map of durham">
                 </a>
                 <p class="text-right">
                     <small>Map data ©2018 Google
@@ -92,14 +92,14 @@
                 </h2>
                 <p>
                     <a href="mailto:mail@durhamsacredharp.co.uk">
-                        <img src="https://durhamsacredharp.co.uk/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px">
+                        <img src="/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px">
                     </a>
                     Email us at
                     <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
                 </p>
                 <p>
                     <a href="https://twitter.com/durham_sh">
-                        <img src="https://durhamsacredharp.co.uk/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px">
+                        <img src="/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px">
                     </a>
                     We're also on Twitter at
                     <a href="https://twitter.com/durham_sh">@durham_sh</a>
@@ -128,9 +128,9 @@
         </div>
     </div>
 
-    <script src="https://durhamsacredharp.co.uk/js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7"
+    <script src="/js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7"
         crossorigin="anonymous"></script>
-    <script src="https://durhamsacredharp.co.uk/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
