--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 </p>
                 <p>
                     <a href="https://www.youtube.com/results?search_query=sacred+harp">YouTube</a> has hundreds (thousands?) of recordings and videos from across the Sacred Harp community.</p>
+                <p><a href="https://www.youtube.com/watch?v=YHUfHNEZDPc">Awake My Soul</a> is a great documentary about Sacred Harp singing.</p>
                 <p>
                     <a href="https://web.archive.org/web/20170530194352/http://www.newcastleshapenote.co.uk/">Newcastle Shapenote</a> sings Sacred Harp and other shapenote music
                     <span class="font-italic">every Tuesday from 7.30pm at the Bridge Hotel</span> and
