--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Durham Sacred Harp</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
@@ -20,14 +21,13 @@
     <meta name="twitter:image" content="https://durhamsacredharp.co.uk/images/dsh_new_share_image_twitter.png">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <meta name="google-site-verification" content="_wn5kDD-KQIqThtDEBTZNvmbzzF3UoENjI3VURcHtqs" />
-
 </head>
 
 <body>
     <div class="container mb-5">
         <div class="row">
             <div class="col-10 offset-1 col-lg-8 offset-lg-2 pt-4 text-center">
-                <img src="/images/dsh_logo_new_website.svg" class="img-fluid" style="max-height: 300px;" alt="Durham Sacred Harp">
+                <img src="images/dsh_logo_website.svg" class="img-fluid" style="max-height: 300px;" alt="Durham Sacred Harp">
             </div>
         </div>
         <div class="row mt-4 mb-4">
@@ -35,7 +35,7 @@
                 <p>
                     <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is
                     also the name of the book we sing from.</p>
-                    
+
                 <!-- <div class="notification px-3 px-md-5">
                     Special announcements go here
                 </div> -->
@@ -76,7 +76,7 @@
                     <small>Click on the map below for Google Maps</small>
                 </p>
                 <a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">
-                    <img src="/images/map.png" class="img-fluid mx-auto d-block" alt="map of durham">
+                    <img src="images/map.png" class="img-fluid mx-auto d-block" alt="map of durham">
                 </a>
                 <p class="text-right">
                     <small>Map data ©2018 Google
@@ -90,20 +90,30 @@
                 <h2 class="text-center mb-3">
                     <u>Contact us</u>
                 </h2>
-                <p>
-                    <a href="mailto:mail@durhamsacredharp.co.uk">
-                        <img src="/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px">
-                    </a>
-                    Email us at
-                    <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
-                </p>
-                <p>
-                    <a href="https://twitter.com/durham_sh">
-                        <img src="/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px">
-                    </a>
-                    We're also on Twitter at
-                    <a href="https://twitter.com/durham_sh">@durham_sh</a>
-                </p>
+                <div class="row mt-3">
+                    <div class="col-3 col-sm-2">
+                        <a href="mailto:mail@durhamsacredharp.co.uk">
+                            <img src="images/email.svg" alt="Email" style="max-width: 50px;">
+                        </a>
+                    </div>
+                    <div class="col-9 col-sm-10">
+                        <p>Email us at
+                            <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-3 col-sm-2">
+                        <a href="https://twitter.com/durham_sh">
+                            <img src="images/twitter.svg" alt="Twitter" style="max-width: 50px;">
+                        </a>
+                    </div>
+                    <div class="col-9 col-sm-10">
+                        <p>We're also on Twitter at
+                            <a href="https://twitter.com/durham_sh">@durham_sh</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row mb-4" id="more-info">
@@ -120,7 +130,8 @@
                 </p>
                 <p>
                     <a href="https://www.youtube.com/results?search_query=sacred+harp">YouTube</a> has hundreds (thousands?) of recordings and videos from across the Sacred Harp community.</p>
-                <p><a href="https://www.youtube.com/watch?v=YHUfHNEZDPc">Awake My Soul</a> is a great documentary about Sacred Harp singing.</p>
+                <p>
+                    <a href="https://www.youtube.com/watch?v=YHUfHNEZDPc">Awake My Soul</a> is a great documentary about Sacred Harp singing.</p>
                 <p>
                     <a href="https://web.archive.org/web/20170530194352/http://www.newcastleshapenote.co.uk/">Newcastle Shapenote</a> sings Sacred Harp and other shapenote music
                     <span class="font-italic">every Tuesday from 7.30pm at the Bridge Hotel</span> and
@@ -129,9 +140,8 @@
         </div>
     </div>
 
-    <script src="/js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7"
-        crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
