--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is
                     also the name of the book we sing from.</p>
 
-                <!-- <div class="notification px-3 px-md-5">
+                <!-- <div class="notification px-3 px-md-5" id="notification">
                     Special announcements go here
                 </div> -->
 
-                <div class="highlight px-3 px-md-5 mb-4">
+                <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
                     <p>
                         <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span> at
                         <a href="#map" class="font-italic font-weight-bold" id="map-link">Antioch House, 66 Crossgate, Durham</a>.</strong>
