--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                 <p>
                     <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is
                     also the name of the book we sing from.</p>
-
+                <p>
+                    <strong>Come along to sing with us!</strong> Our singings are open to all. We aren't a choir as we don't rehearse
+                    or perform and no-one's in charge. Everyone just sings for their own enjoyment. You don't need to be
+                    able to read music yet or have a "good" voice to come along.</p>
                 <!-- <div class="notification px-3 px-md-5" id="notification">
                     Special announcements go here
                 </div> -->
@@ -50,10 +53,27 @@
                     <div id="upcoming-singings"></div>
 
                 </div>
+                <div id="newsletter_signup" class="pt-3 pb-3 mb-4 text-center border">
+                    <h5>Get updates about our singings</h5>
+                    <form action="https://tinyletter.com/durhamsacredharp" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/durhamsacredharp', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"
+                        class="form-inline">
+                        <div class="form-group mx-auto">
+                            <!-- <label for="tlemail" class="mr-4">Enter your email address</label> -->
 
-                <p>Come along to sing with us! Our singings are open to all. We aren't a choir as we don't rehearse or perform
-                    and no-one's in charge. Everyone just sings for their own enjoyment. You don't need to be able to read
-                    music yet or have a "good" voice to come along.</p>
+                            <input type="email" class="form-control text-center mt-2 mb-2" placeholder="email@example.com" name="email" id="tlemail"
+                            />
+                            <input type="hidden" value="1" name="embed" />
+
+                            <button class="btn ml-4" style="background-color: #2859a3; color: white;" type="submit">Subscribe</button>
+                        </div>
+
+                        <small id="emailHelp" class="form-text text-muted px-2 px-md-5">We use TinyLetter to send email updates. You'll receive an email from them to confirm you want to
+                            subscribe. This is
+                            <a href="https://mailchimp.com/legal/privacy/">their privacy policy</a>.</small>
+
+
+                    </form>
+                </div>
 
                 <p>The words of most of the songs are from the Christian faith but singers of all religions and none are welcome.</p>
 
