--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                     <div id="upcoming-singings"></div>
 
                 </div>
-                <div id="newsletter_signup" class="pt-3 pb-3 mb-4 text-center border">
+        
+                <div id="updates_signup" class="pt-3 pb-3 mb-4 text-center border">
+                    
                     <h5>Get updates about our singings</h5>
                     <form action="https://tinyletter.com/durhamsacredharp" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/durhamsacredharp', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"
                         class="form-inline">
