--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
                     <p>
                         <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span> at
-                        <a href="#map" class="font-italic font-weight-bold" id="map-link">Antioch House, 66 Crossgate, Durham</a>.</strong>
+                        <a href="#map" class="font-italic font-weight-bold" id="map-link">Antioch House, 66 Crossgate, Durham</a>.
                     </p>
 
                     <!-- upcoming singings html inserted with javascript -->
