--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
 
     <script src="js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+    <script src="js/fathom.js"></script>
+
 </body>
 
 </html>
