--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta name="twitter:image" content="https://durhamsacredharp.co.uk/images/dsh_new_share_image_twitter.png">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <meta name="google-site-verification" content="_wn5kDD-KQIqThtDEBTZNvmbzzF3UoENjI3VURcHtqs" />
+    <script src="js/matomo.js"></script>
+
 </head>
 
 <body>
@@ -162,7 +164,7 @@
 
     <script src="js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
-    <script src="js/fathom.js"></script>
+<!--     <script src="js/fathom.js"></script> -->
 
 </body>
 
