--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
                             <button class="btn ml-4" style="background-color: #2859a3; color: white;" type="submit">Subscribe</button>
                         </div>
 
-                        <small class="form-text text-muted px-2 px-md-5">We use TinyLetter to send email updates. You'll receive an email from them to confirm you want to
-                            subscribe. This is
-                            <a href="https://mailchimp.com/legal/privacy/">their privacy policy</a>.</small>
-
-
+                        <small class="form-text px-2 px-md-5">We use TinyLetter to send email updates. You'll receive an email from them to confirm you want to subscribe. This is <a href="https://mailchimp.com/legal/privacy/">their privacy policy</a>.</small>
                     </form>
                 </div>
 
