--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                     <strong>Come along to sing with us!</strong> Our singings are open to all. We aren't a choir as we don't rehearse
                     or perform and no-one's in charge. Everyone just sings for their own enjoyment. You don't need to be
                     able to read music yet or have a "good" voice to come along.</p>
-                <!-- <div class="notification px-3 px-md-5" id="notification">
-                    Special announcements go here
-                </div> -->
+                <div class="notification px-3 px-md-5" id="notification">
+                <!-- Special announcements go here -->
+                    <p>Unfortunately the singing on Saturday 22 September is off. We'll be back singing again on Saturday 13 October.</p>
+                </div>
 
                 <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
                     <p>
