--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     able to read music yet or have a "good" voice to come along.</p>
                 <div class="notification px-3 px-md-5" id="notification">
                 <!-- Special announcements go here -->
-                    <p>Unfortunately the singing on Saturday 22 September is off. We'll be back singing again on Saturday 13 October.</p>
+                    <p><strong>Unfortunately the singing on Saturday 22 September is off.</strong> We'll be back singing again on Saturday 13 October.</p>
                 </div>
 
                 <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
