--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <strong>Come along to sing with us!</strong> Our singings are open to all. We aren't a choir as we don't rehearse
                     or perform and no-one's in charge. Everyone just sings for their own enjoyment. You don't need to be
                     able to read music yet or have a "good" voice to come along.</p>
-                 <div class="notification px-3 px-md-5" id="notification">-->
+                 <div class="notification px-3 px-md-5" id="notification">
                 <!-- Special announcements go here -->
                      <p>Unfortunately the singings on <strong>13th</strong> and <strong>27th October</strong> are off. We'll be singing again on <strong>27th November</strong></p>
                 </div>
