--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     or perform and no-one's in charge. Everyone just sings for their own enjoyment. You don't need to be
                     able to read music yet or have a "good" voice to come along.</p>
                  <div class="notification px-3 px-md-5" id="notification">
-                <!-- Special announcements go here -->
+                <!-- Special announcements go here
                      <p>Unfortunately the singings on <strong>13th</strong> and <strong>27th October</strong> are off. We'll be singing again on <strong>27th November</strong></p>
-                </div>
+                </div> -->
 
                 <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
                     <p>
